<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_tweaks"
        android:title="@string/nav_tweaks">

        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_main"
                    android:icon="@drawable/ic_main"
                    android:title="@string/main_tweaks" />
                <item
                    android:id="@+id/nav_dialer"
                    android:icon="@drawable/ic_dialer"
                    android:title="@string/lockscreen_dialer" />
                <item
                    android:id="@+id/nav_music"
                    android:icon="@drawable/ic_music"
                    android:title="@string/statusbar_music" />
                <item
                    android:id="@+id/nav_video"
                    android:icon="@drawable/ic_video"
                    android:title="@string/external_media_player" />
                <item
                    android:id="@+id/nav_brightness"
                    android:icon="@drawable/ic_brightness_auto"
                    android:title="@string/brightness_fix" />
                <item
                    android:id="@+id/nav_animation"
                    android:icon="@drawable/ic_animation"
                    android:title="@string/animation_scale" />
                <item
                    android:id="@+id/nav_toggles"
                    android:icon="@drawable/ic_toggle_list"
                    android:title="@string/toggle_list" />
            </group>
        </menu>

    </item>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_changlelog"
            android:icon="@drawable/ic_changelog"
            android:title="@string/changelog_title" />

    </group>

</menu>
