<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:title="@string/animation_scale"
        android:summary="@string/animation_scale_description"
        android:enabled="false"
        android:layout="@layout/description_preference_layout"/>

    <SwitchPreferenceCompat
        android:key="animation_scale"
        android:title="@string/enable"/>

    <EditTextPreference
        android:key="animation_scale_window"
        android:title="@string/animation_scale_window"
        android:digits="0,1,2,3,4,5,6,7,8,9,."
        android:inputType="number"
        android:dependency="animation_scale" />

    <EditTextPreference
        android:key="animation_scale_transition"
        android:title="@string/animation_scale_transition"
        android:digits="0,1,2,3,4,5,6,7,8,9,."
        android:inputType="number"
        android:dependency="animation_scale" />

    <EditTextPreference
        android:key="animation_scale_duration"
        android:title="@string/animation_scale_duration"
        android:digits="0,1,2,3,4,5,6,7,8,9,."
        android:inputType="number"
        android:dependency="animation_scale" />

</PreferenceScreen>