<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ui.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="2dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/logo"
                android:src="@mipmap/ic_launcher"
                android:layout_marginEnd="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:id="@+id/app_name"
                    android:textStyle="bold"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:id="@+id/description"
                    android:textStyle="italic"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/contacts"
            android:id="@+id/contacts"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/telegram"
                android:src="@mipmap/ic_telegram"
                android:layout_weight="1" />

            <!--<ImageView-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:id="@+id/xda"-->
            <!--android:src="@drawable/xda"-->
            <!--android:layout_weight="1" />-->

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/forpda"
                android:src="@mipmap/ic_4pda"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/gmail"
                android:src="@mipmap/ic_gmail"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/thanks"
            android:id="@+id/thanks"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_to"
            android:id="@+id/thanks_to"
            android:textSize="15dp"
            android:layout_marginTop="10dp" />


    </LinearLayout>

</RelativeLayout>